[package]
name = "swallow"
version = "0.1.0"
edition = "2024"

[dependencies]
secp256k1 = { version = "0.31.1", features = ["rand", "hashes"] }

# HMAC + SHA-512 (BIP32 derivace)
hmac = "0.12"
sha2 = "0.10"
serde_json = {version = "1.0.149"}
serde = {features=["derive"], version="1.0.228"}
# Náhodná data (seed)
rand = "0.9.2"
rust_decimal = "1.40.0"

# Chyby
anyhow = "1"